<resources>
    <string name="app_name">MatchSchool</string>
    <string name="textMatchSchool">MatchSchool</string>
    <string name="email_hint">Email:</string>
    <string name="personal_data">Dados Pessoais</string>
    <string name="password_hint">Senha:</string>
    <string name="save_login_text">Salvar login</string>
    <string name="login_button_text">Entrar</string>
    <string name="register_button_text">Cadastre-se</string>
    <string name="name_hint">Nome:</string>
    <string name="cpf_hint">CPF:</string>
    <string name="street_hint">Rua:</string>
    <string name="cep_hint">CEP:</string>
    <string name="city_hint">Cidade:</string>
    <string name="date_of_birth_hint">Data de Nascimento:</string>
    <string name="back_button_text">Voltar</string>
    <string name="next_button_text">Próximo</string>
    <string name="inform_data">Informe seus dados</string>
    <string name="objective_question">Qual seu objetivo?</string>
    <string name="institution_hint">Instituição de ensino:</string>
    <string name="course_hint">Curso:</string>
    <string name="start_year_hint">Ano de Início:</string>
    <string name="search_hint">Pesquisar...</string>
    <string name="skills_hint">Habilidades:</string>
    <string name="interests_hint">Interesses:</string>
    <string name="skills_hint_view">Habilidades</string>
    <string name="interests_hint_view">Interesses</string>
    <string name="add_text">Adicionar</string>
    <string name="education_hint">Escolaridade</string>
    <string name="experience_time_hint">Selecione o tempo de atuação</string>
    <string name="field_of_work_hint">Selecione sua área de atuação</string>
    <string name="select_the_type_of_course">Selecione o tipo de curso</string>
    <string name="select_duration">Selecione a duração do curso</string>
    <string name="select_interest">Selecione os assuntos de interesse</string>
    <string name="select_sex">Sexo</string>
    <string name="select_location">Localização</string>
    <string name="Text_location">Localização:</string>
    <string name="duration_hint">Duração:</string>
    <string name="duration_select">Duração:</string>
    <string name="occupation_area_hint">Área de atuação</string>
    <string name="occupation_area_Text">Área de atuação:</string>
    <string name="gender_hint">Sexo:</string>
    <string name="state_hint">Estado:</string>
    <string name="select_state">Estado</string>
    <string name="work_experience_hint">Tempo de atuação:</string>
    <string name="education_type_hint">Tipo de ensino:</string>
    <string name="education_type_select">Tipo de ensino</string>
    <string name="position_hint">Cargo:</string>
    <string name="experience_hint">Experiência:</string>
    <string name="career_hint">Carreira:</string>
    <string name="availability_label">Período disponível:</string>
    <string name="day_of_week_label">Dia da Semana</string>
    <string name="rating_label">Avaliação:</string>
    <string name="comments_label">Comentários:</string>
    <string name="profile">Perfil</string>
    <string name="notifications">Notificações</string>
    <string name="edit">Editar</string>
    <string name="feed">Feed</string>
    <string name="settings">Configurações</string>
    <string name="hit_morning">Manhã</string>
    <string name="hit_night">Noite</string>
    <string name="hit_afternoon">Tarde</string>
    <string name="weekday_monday">Seg</string>
    <string name="weekday_tuesday">Ter</string>
    <string name="weekday_wednesday">Qua</string>
    <string name="weekday_thursday">Qui</string>
    <string name="weekday_friday">Sex</string>
    <string name="weekday_saturday">Sab</string>
    <string name="weekday_sunday">Dom</string>
    <string name="show_only">Mostrar somente </string>
    <string name="with"> com:</string>
    <string name="apply">Aplicar</string>
    <string name="default_">Padrão</string>
    <string name="you_and">Você e</string>
    <string name="matched">Deram Match</string>
    <string name="now_you_can">e agora você pode</string>
    <string name="chat">Chat</string>
    <string name="view_profile">Ver Perfil</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="conversations">Conversas</string>
    <string name="start_conversation">Comece a</string>
    <string name="start_conversation_with">conversando com</string>
    <string name="send_message">envie uma mensagem</string>
    <string name="rating">Avaliação</string>
    <string name="rate">Avalie </string>
    <string name="rate_experience"> pela sua experiência</string>
    <string name="send">Enviar</string>
    <string name="leave_comment">Deixe seu comentário:</string>
    <string name="invalid_email">Digite um email válido</string>
    <string name="enter_password">Digite sua senha</string>
    <string name="password_length">Sua senha deve ter no mínimo 8 caracteres</string>
    <string name="Field_needs_to_be_filled_in">Campo precisa se preenchido</string>
    <string name="cpf_invalid">"O CPF deve ter 11 dígitos"</string>
    <string name="cep_invalid">"O CEP deve ter 8 dígitos"</string>
    <string name="date_invalid_start">"Essa data não é válida"</string>
    <string name="date_invalid">"A data de nascimento não é válida ou o usuário tem menos de 18 anos"</string>
    <string name="select_type_duration_error">Selecione uma opção nos campos Tipo de Ensino e Duração</string>
    <string name="select_state_gender_error">Selecione uma opção nos campos Estado e Sexo</string>
    <string name="add_interest_error_student">Você precisa adicionar pelo menos um interesse</string>
    <string name="add_interest_error_mentor">Você precisa adicionar pelo menos um habilidade</string>


</resources>
