<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivityEI">


    <EditText
        android:id="@+id/registerEiEducationalInstitution"
        android:layout_width="302dp"
        android:layout_height="48dp"
        android:background="@drawable/input_background_edit_nor"
        android:backgroundTint="#D4D4D4"
        android:backgroundTintMode="multiply"
        android:ems="10"
        android:hint="@string/institution_hint"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout15"
        app:layout_constraintVertical_bias="0.031" />

    <EditText
        android:id="@+id/registerEiCourse"
        android:layout_width="302dp"
        android:layout_height="48dp"
        android:background="@drawable/input_background_edit_nor"
        android:backgroundTint="#D4D4D4"
        android:backgroundTintMode="multiply"
        android:ems="10"
        android:hint="@string/course_hint"
        android:inputType="textAutoCorrect"
        android:paddingLeft="20dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEiEducationalInstitution"
        app:layout_constraintVertical_bias="0.043" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonRegisterEi"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <Button
            android:id="@+id/registerEiBack"
            android:layout_width="160dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:backgroundTint="#D5D5D5"
            android:elevation="1000dp"
            android:text="@string/back_button_text"
            android:textColor="#4A4A4A"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/registerEiNext"
            android:layout_width="160dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:backgroundTint="#A5F422"
            android:elevation="8dp"
            android:text="@string/next_button_text"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="206dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Spinner
        android:id="@+id/spinnerTypeTeachingEiRegister"
        android:layout_width="302dp"
        android:layout_height="48dp"
        android:layout_marginBottom="208dp"
        android:background="@drawable/selection_button_background"
        android:drawablePadding="8dp"
        android:entries="@array/TypeOfCourse"
        android:paddingLeft="16dp"
        android:prompt="@string/select_the_type_of_course"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEiDateStart"
        app:layout_constraintVertical_bias="0.104" />

    <LinearLayout
        android:id="@+id/registerEiDateStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEiCourse"
        app:layout_constraintVertical_bias="0.042">

        <TextView
            android:id="@+id/registerEiDateStartLabel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/start_year_hint"
            android:textAlignment="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/registerEiDateStartEdit"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:background="@drawable/input_background_edit"
            android:backgroundTint="#D4D4D4"
            android:backgroundTintMode="multiply"
            android:ems="10"
            android:hint="dd/MM/yyyy"
            android:inputType="date"
            android:paddingEnd="16dp"
            android:textAlignment="center" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinnerDurationEiRegister"
        android:layout_width="302dp"
        android:layout_height="48dp"
        android:background="@drawable/selection_button_background"
        android:drawablePadding="8dp"
        android:entries="@array/duration"
        android:paddingLeft="16dp"
        android:prompt="@string/select_duration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTypeTeachingEiRegister"
        app:layout_constraintVertical_bias="0.067" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDurationEiRegister"
        app:layout_constraintVertical_bias="0.060000002">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="83dp"
            android:layout_height="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="8dp"
            app:srcCompat="@drawable/line_black_small" />

        <TextView
            android:id="@+id/textViewInterestSkill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Habilidades"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="230dp"
            android:layout_height="20dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            app:srcCompat="@drawable/line_black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="75dp"
            android:layout_height="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="8dp"
            app:srcCompat="@drawable/line_black_small" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/education_hint"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="210dp"
            android:layout_height="20dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            app:srcCompat="@drawable/line_black" />
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout5"
        android:layout_width="317dp"
        android:layout_height="145dp"
        android:background="@drawable/input_background_big_edit"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.25">

        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="175dp"
            android:layout_height="47dp"
            android:layout_weight="0.8"
            android:background="#00FDF6FE"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingEnd="16dp"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_add_chip"
            app:layout_constraintHorizontal_bias="0.142"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_add_chip"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="0.2"
            android:backgroundTint="#89CE18"
            android:text="@string/add_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.923"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="312dp"
            android:layout_height="87dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>